add groovy and spock to the project