@@ -34,6 +34,13 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>0.6-groovy-1.8</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
             <version>${powermock.version}</version>
@@ -466,24 +473,6 @@
             <version>7.0.0pre0</version>
         </dependency>
 
-        <!--Cucumber-->
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>1.8.6</version>
-        </dependency>
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-groovy</artifactId>
-            <version>1.0.8</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>1.0.8</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <distributionManagement>
@@ -495,173 +484,6 @@
     </distributionManagement>
 
     <profiles>
-        <profile>
-            <id>cucumber</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.gmaven</groupId>
-                        <artifactId>gmaven-plugin</artifactId>
-                        <version>1.4</version>
-                        <executions>
-                            <execution>
-                                <configuration>
-                                    <providerSelection>1.8</providerSelection>
-                                    <defaultScriptExtension>.groovy</defaultScriptExtension>
-                                </configuration>
-                                <goals>
-                                    <goal>shell</goal>
-                                    <goal>generateStubs</goal>
-                                    <goal>compile</goal>
-                                    <goal>generateTestStubs</goal>
-                                    <goal>testCompile</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>com.sun.jersey.jersey-test-framework</groupId>
-                                <artifactId>jersey-test-framework-grizzly</artifactId>
-                                <version>1.6</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.codehaus.gmaven.runtime</groupId>
-                                <artifactId>gmaven-runtime-1.6</artifactId>
-                                <version>1.3</version>
-                                <exclusions>
-                                    <exclusion>
-                                        <groupId>org.codehaus.groovy</groupId>
-                                        <artifactId>groovy-all</artifactId>
-                                    </exclusion>
-                                </exclusions>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.fusesource.jansi</groupId>
-                                <artifactId>jansi</artifactId>
-                                <version>1.2.1</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.codehaus.gmaven.runtime</groupId>
-                                <artifactId>gmaven-runtime-1.8</artifactId>
-                                <version>1.4</version>
-                                <exclusions>
-                                    <exclusion>
-                                        <groupId>org.codehaus.groovy</groupId>
-                                        <artifactId>groovy-all</artifactId>
-                                    </exclusion>
-                                </exclusions>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.codehaus.groovy</groupId>
-                                <artifactId>groovy-all</artifactId>
-                                <version>1.8.6</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.mortbay.jetty</groupId>
-                        <artifactId>jetty-maven-plugin</artifactId>
-                        <version>7.3.0.v20110203</version>
-                        <configuration>
-                            <systemProperties>
-                                <systemProperty>
-                                    <name>jetty.port</name>
-                                    <value>${jetty.port}</value>
-                                </systemProperty>
-                                <systemProperty>
-                                    <name>idm.properties.location</name>
-                                    <value>${basedir}/target/config/DEV</value>
-                                </systemProperty>
-                            </systemProperties>
-                            <stopPort>9966</stopPort>
-                            <stopKey>jetty-stop</stopKey>
-                            <webAppConfig>
-                                <contextPath>/${project.name}</contextPath>
-                            </webAppConfig>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>start-jetty</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <scanIntervalSeconds>0</scanIntervalSeconds>
-                                    <daemon>true</daemon>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>stop-jetty</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.12</version>
-                        <configuration>
-                            <skip>true</skip>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
-                            <systemProperties>
-                                <property>
-                                    <name>idm.properties.location</name>
-                                    <value>${basedir}/target/config/DEV</value>
-                                </property>
-                                <property>
-                                    <name>jetty.host</name>
-                                    <value>http://localhost:${jetty.port}/idm/</value>
-                                </property>
-                            </systemProperties>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>tests</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <skip>true</skip>
-                                    <excludes>
-                                        <exclude>**/*IntegrationTest*.java</exclude>
-                                    </excludes>
-                                    <includes>
-                                        <include>**/*Test*.java</include>
-                                    </includes>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>integration-tests</id>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <skip>false</skip>
-                                    <excludes>
-                                        <exclude>**/Ldap*.java</exclude>
-                                        <exclude>**/*Test*.java</exclude>
-                                    </excludes>
-                                    <includes>
-                                        <include>**/*Cuke**.java</include>
-                                    </includes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
         <profile>
             <id>soapui-dev</id>
             <activation>
@@ -1151,6 +973,40 @@
     </organization>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <providerSelection>1.7</providerSelection>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>          
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.gmaven.runtime</groupId>
+                        <artifactId>gmaven-runtime-1.7</artifactId>
+                        <version>1.3</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.codehaus.groovy</groupId>
+                                <artifactId>groovy-all</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                        <version>1.8.6</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>xml-maven-plugin</artifactId>
